--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -13,6 +13,11 @@ html, body {
 
 }
 
+.d-flex-center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
 .swiper-pagination {
   z-index: 1000 !important;
