--- a/src/assets/styles/colors.scss
+++ b/src/assets/styles/colors.scss
@@ -1,6 +1,15 @@
 :root {
+  --white: #ffffff;
   --black: #353132;
   --auxan: #5FED2F;
   --primary: #0E5445;
-  --light-gray: #d9d9d9
+  --light-gray: #d9d9d9;
+  --auxan-transparent: #dffbd5;
+  --gray: #A5A3A3;
+  --primary-selected: #37a13a;
+  --danger: #EC1C24;
+  --disable-gray: #707070;
+  --disable-gray-trans: #70707019;
+  --black-hovor: #212529;
+  --black-shadow: #7070704c;
 }
