--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -13,6 +13,16 @@ html, body {
 
 }
 
+a {
+  text-decoration: none;
+}
+
+.relative {
+  position: relative;
+}
+
+
+
 .d-flex-center {
   display: flex;
   justify-content: center;
