--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -21,7 +21,31 @@ a {
   position: relative;
 }
 
+.gradient-right {
+  height: 100%;
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 10%;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  z-index: 10;
+  background: linear-gradient(to right, rgba(255, 255, 255, 0), rgba(255, 255, 255, 1));
+}
 
+.gradient-left {
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 10%;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  z-index: 10;
+  background: linear-gradient(to left, rgba(255, 255, 255, 0), rgba(255, 255, 255, 1));
+}
 
 .d-flex-center {
   display: flex;
