--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -62,6 +62,13 @@ a {
   max-width: 1200px;
 }
 
+.divider {
+  width: 100%;
+  height: 2px;
+  background: rgba(112, 112, 112, 0.1);
+  //margin: 5px 0;
+}
+
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
   -webkit-appearance: none;
