--- a/src/components/Select/Select.module.scss
+++ b/src/components/Select/Select.module.scss
@@ -27,3 +27,60 @@
   text-align: right;
   color: var(--gray);
 }
+
+.content {
+  max-width: 371px;
+  padding: 20px;
+  border-radius: 20px !important;
+}
+
+.titleModal {
+  //styleName: H2;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 20.4px;
+  text-align: right;
+  margin-bottom: 10px;
+}
+
+.subTitle {
+  //styleName: P3;
+  font-size: 12px;
+  font-weight: 325;
+  line-height: 18.6px;
+  text-align: right;
+  direction: rtl;
+  margin-bottom: 10px;
+}
+
+.buttons {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  margin-top: 5px;
+
+  button {
+    height: 31px;
+    width: 100%;
+    border-radius: 33px;
+  }
+
+  .btnSelect {
+    border: none;
+    color: var(--white);
+    background: var(--gray);
+  }
+
+  .btnClose {
+    background: transparent;
+    border: 1px solid var(--primary);
+    color: var(--primary);
+    transition: all ease 0.4s;
+
+    &:hover {
+      background: var(--auxan);
+    }
+  }
+}
